<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_menu"
        android:icon="@drawable/ic_color"
        android:title="@string/menu_title_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/image_menu"
        android:icon="@drawable/ic_camera"
        android:title="@string/menu_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_note_menu"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_delete_note"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit_note_menu"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_save_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_note_menu"
        android:orderInCategory="100"
        android:title="@string/menu_add_note" />

</menu>