<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_menu"
        android:icon="@drawable/ic_color"
        android:orderInCategory="100"
        android:title="@string/menu_title_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/image_menu"
        android:icon="@drawable/ic_camera"
        android:orderInCategory="100"
        android:title="@string/menu_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/save_note_menu"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_save_note"
        app:showAsAction="always" />
</menu>